# SpectraLab-P4

./: .gitattributes  .gitignore  C6Update.md  CHANGELOG.md  CMakeLists.txt  LICENSE  P4X-Compatibility.md  README.md  ROADMAP.md  UserGuide.md  claude.md  feature_suggestions.md  hardware-setup.md  instructions.md  partitions.csv  platformio.ini  safety.md  sdkconfig.defaults  sdkconfig.esp32-p4-evboard  sdkconfig.esp32-p4x-evboard
components/: README.md
components/agc/: CMakeLists.txt
components/agc/include/: agc.h
components/agc/src/: agc.c
components/audio_source/: CMakeLists.txt  Kconfig
components/audio_source/include/: audio_source.h
components/audio_source/src/: audio_i2s.c  audio_source.c  audio_usb.c
components/display_ui/: CMakeLists.txt
components/display_ui/include/: display_ui.h
components/display_ui/src/: display_init.c  display_init.h  display_ui.c  screen_file_dialog.c  screen_file_dialog.h  screen_settings.c  screen_settings.h  screen_spectrum.c  screen_spectrum.h  screen_splash.c  screen_splash.h  screen_wifi.c  screen_wifi.h  touch_gesture.c
components/dsp_engine/: CMakeLists.txt  Kconfig
components/dsp_engine/include/: dsp_engine.h
components/dsp_engine/src/: averaging.c  averaging.h  dsp_engine.c  fft_processor.c  fft_processor.h  spl_meter.c  spl_meter.h  window_fn.c  window_fn.h
components/net_mgr/include/: net_mgr.h
components/net_mgr/src/: net_mgr.c
components/qr_scan/: CMakeLists.txt
components/qr_scan/include/: qr_scan.h
components/qr_scan/src/: qr_scan.c
components/settings_mgr/: CMakeLists.txt
components/settings_mgr/include/: settings_mgr.h
components/settings_mgr/src/: settings_mgr.c
components/web_server/src/: web_assets.c  web_server.c
include/: sdkconfig.h
src/: CMakeLists.txt  idf_component.yml  main.c
tools/: check_chip_rev.py  fix_openocd_upload.py  generate_esp_ipa_config.py  make_readme_media.py  make_readme_media.sh
web/: cal-upload.html  index.html  style.css  wifi-setup.html
