idf_component_register(
    SRCS
        "src/audio_source.c"
        "src/audio_i2s.c"
        "src/audio_usb.c"
    INCLUDE_DIRS
        "include"
    PRIV_INCLUDE_DIRS
        "src"
    REQUIRES
        freertos
        esp_common
        heap
        driver
        log
        esp32_p4_function_ev_board
    PRIV_REQUIRES
        es8311
        usb
        usb_host_uac
)
