idf_component_register(
    SRCS
        "src/display_ui.c"
        "src/display_init.c"
        "src/screen_spectrum.c"
        "src/screen_settings.c"
        "src/screen_file_dialog.c"
    INCLUDE_DIRS
        "include"
    PRIV_INCLUDE_DIRS
        "src"
    REQUIRES
        freertos
        esp_common
        heap
        log
        esp_timer
        driver
        esp32_p4_function_ev_board
        esp_lvgl_port
        lvgl
        dsp_engine
        audio_source
        settings_mgr
        esp_hw_support
        esp_lcd
        esp_lcd_ek79007
        esp_lcd_touch
        esp_lcd_touch_gt911
)
